--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 NODE_ENV=development
-DB_USERNAME=postgres
+DB_USER=postgres
 DB_PASSWORD=1234
 DB_PORT=5432
 DB_NAME=eportfolio
 DB_HOST=localhost
 DB_DIALECT=postgres
+
+REFRESH_TOKEN_SECRET=secret
+REFRESH_TOKEN_EXPIRE=1d
+ACCESS_TOKEN_SECRET=secret
+ACCESS_TOKEN_EXPIRE=5m
+CORS_WHITELIST=['']
