--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_DIALECT=postgres
 
 REFRESH_TOKEN_SECRET=secret
-REFRESH_TOKEN_EXPIRE=1d
+REFRESH_TOKEN_EXPIRE=3600 #in seconds
 ACCESS_TOKEN_SECRET=secret
-ACCESS_TOKEN_EXPIRE=5m
-CORS_WHITELIST=['']
+ACCESS_TOKEN_EXPIRE=300 #in seconds
+CORS_WHITELIST=["http://localhost:5173",""]
